[package]
name = "mazelib"
version = "0.1.0"
authors = ["Alphaesia"]
edition = "2021"
description = "A comprehensive library for generating and solving mazes"
readme = "README.md"
license = "MIT"
keywords = ["maze", "mazes", "mz"]
categories = ["algorithms"]
publish = false

[dependencies]
rand = "0.8.4"

[lib]
name = "mazelib"
path = "src/mazelib.rs"

[[bin]]
name = "mazelib-test"
path = "src/test/main.rs"