[package]
name = "mazelib"
version = "0.1.0"
authors = ["Alphaesia"]
edition = "2021"
description = "A comprehensive library for generating and solving mazes"
readme = "README.md"
license = "MIT"
keywords = ["maze", "mazes", "mz"]
categories = ["algorithms"]
publish = false

[features]
img = ["dep:image"]
minecraft = ["dep:hematite-nbt", "dep:serde"]

[dependencies]
rand = "0.8.4"
embed-doc-image = "0.1.4"
image = { version = "0.24.1", optional = true } # TODO is there a way to allow users to only enable image formats they want?
hematite-nbt = { version = "0.5.2", optional = true }
serde = { version = "1.0.136", optional = true }

[lib]
name = "mazelib"
path = "src/mazelib.rs"

[[bin]]
name = "mazelib-test"
path = "src/test/main.rs"